wireframing for home page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trattoria Iris</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/95e358ce56.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <h1 class="main-logo">Trattoria Iris Logo</h1>
+        <nav>
+            <i class="fas fa-bars menu"></i>
+        </nav>
+    </header>
+    <div class="bio">Restaurant Bio</div>
+    <div class="hours">Hours</div>
+    <div class="location">Location</div>
+    <div class="reservations">Resevations</div>
+    <div class="img-container">Images</div>
+    <footer>&copy; and some social media icons</footer>
 </body>
 </html>
