header and hero content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
             <i class="fas fa-bars menu"></i>
         </nav>
     </header>
-    <div class="bio">Restaurant Bio</div>
+    <div class="welcome-container">
+        <div class="welcome">
+            <h2>Welcome to Trattoria Iris</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non cupiditate, recusandae nam vel tenetur delectus. 
+                Aut, esse, earum atque blanditiis deleniti corporis cupiditate voluptate, dolore cumque saepe voluptas accusamus 
+                est?
+            </p>
+        </div>
+    </div>
     <div class="hours">Hours</div>
     <div class="location">Location</div>
     <div class="reservations">Resevations</div>
