hours and location

--- a/index.html
+++ b/index.html
@@ -23,8 +23,19 @@
             </p>
         </div>
     </div>
-    <div class="hours">Hours</div>
-    <div class="location">Location</div>
+    <div class="hours">
+        <h2 class="hours-cell">Hours</h2>
+        <div class="hours-cell">Mon - Thurs:</div>
+        <div class="hours-cell">10am - 10pm</div>
+        <div class="hours-cell">Fri - Sat:</div>
+        <div class="hours-cell">10am - 11pm</div>
+        <div class="hours-cell">Sun:</div>
+        <div class="hours-cell">9am - 9pm</div>
+    </div>
+    <div class="location">
+        <h2>Located at</h2>
+        <p>123 Easy St. Washington D.C. 20001</p>
+    </div>
     <div class="reservations">Resevations</div>
     <div class="img-container">Images</div>
     <footer>&copy; and some social media icons</footer>
