added images and formatting

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trattoria Iris</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/95e358ce56.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1 class="main-logo">Trattoria Iris Logo</h1>
+        <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
         <nav>
             <i class="fas fa-bars menu"></i>
         </nav>
@@ -23,21 +25,34 @@
             </p>
         </div>
     </div>
-    <div class="hours">
-        <h2 class="hours-cell">Hours</h2>
-        <div class="hours-cell">Mon - Thurs:</div>
-        <div class="hours-cell">10am - 10pm</div>
-        <div class="hours-cell">Fri - Sat:</div>
-        <div class="hours-cell">10am - 11pm</div>
-        <div class="hours-cell">Sun:</div>
-        <div class="hours-cell">9am - 9pm</div>
+    <div class="hours-location-container">
+        <div class="hours">
+            <h2 class="hours-cell">Hours</h2>
+            <div class="hours-cell">Mon - Thurs:</div>
+            <div class="hours-cell">10am - 10pm</div>
+            <div class="hours-cell">Fri - Sat:</div>
+            <div class="hours-cell">10am - 11pm</div>
+            <div class="hours-cell">Sun:</div>
+            <div class="hours-cell">9am - 9pm</div>
+        </div>
+        <div class="location">
+            <h2>Located at</h2>
+            <p>123 Easy St. Washington D.C. 20001</p>
+        </div>
     </div>
-    <div class="location">
-        <h2>Located at</h2>
-        <p>123 Easy St. Washington D.C. 20001</p>
+    <div class="reservations"><a href="#"><h2>Make a Reservation</h2></a></div>
+    <div class="img-container">
+        <img src="assets/images/food_1.jpg" alt=""> <!--Photo by Casey Lee on Unsplash-->
+        <img src="assets/images/bar_1.jpg" alt=""> <!--Photo by Patrick Tomasso on Unsplash-->
+        <img src="assets/images/drink_1.jpg" alt=""> <!--Photo by Shangyou Shi on Unsplash-->
+        <img src="assets/images/water.jpg" alt=""> <!--Photo by Cloris Ying on Unsplash-->
+        <img src="assets/images/food_2.jpg" alt=""> <!--Photo by STIL on Unsplash-->
+        <img src="assets/images/drink_2.jpg" alt=""> <!--Photo by Ash Edmonds on Unsplash-->
     </div>
-    <div class="reservations">Resevations</div>
-    <div class="img-container">Images</div>
-    <footer>&copy; and some social media icons</footer>
+    <div class="social-media">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram-square"></i>
+    </div>
+    <footer>&copy; 2021 Trattoria Iris</footer>
 </body>
 </html>
