--- a/menu.html
+++ b/menu.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/95e358ce56.js" crossorigin="anonymous"></script>
+    <title>Trattoria Iris - Menu</title>
 </head>
 <body>
-    
+    <header>
+        <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
+        <nav>
+            <i class="fas fa-bars menu"></i>
+        </nav>
+    </header>
 </body>
 </html>
