--- a/menu.html
+++ b/menu.html
@@ -8,11 +8,81 @@
     <title>Trattoria Iris - Menu</title>
 </head>
 <body>
-    <header>
-        <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
-        <nav>
-            <i class="fas fa-bars menu"></i>
-        </nav>
-    </header>
+    <div class="push-container">
+        <div class="menu-content">
+            <header>
+                <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
+                <nav>
+                    <i class="fas fa-bars menu"></i>
+                </nav>
+            </header>
+            <div class="appetizers">
+                <h2 class="menu-header">Appetizers</h2>
+                <div class="menu-item">
+                    <h4>Stuffed Mushrooms</h4>
+                    <p>Baby bellas stuffed with garlic, vegetables, and cheese</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Bruschetta</h4>
+                    <p>Bread topped with tomatoes, balsamic vinegar, olive oil, and garlic</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Fried Calimari</h4>
+                    <p>Lightly floured and served with homemade marinara sauce</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Bocconcini</h4>
+                    <p>Fried mozzarella balls with homemade marinara sauce</p>
+                <div class="menu-item">
+                    <h4>Arancini</h4>
+                    <p>Rice balls with a meat and marinara sauce</p>
+                </div>
+            </div>
+            </div>
+            <div class="entrees">
+                <h2 class="menu-header">Entrees</h2>
+                <div class="menu-item">
+                    <h4>Carbonara</h4>
+                    <p>Spaghetti served al dente with white sauce, pancetta, parmesan and egg yolk</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Lasagna</h4>
+                    <p>Classic Italian lasagna with bechamel sauce</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Spaghetti</h4>
+                    <p>Class Italian spaghetti with tomato sauce and meatballs</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Pizza</h4>
+                    <p>Wood-fired pizza with your choice of toppings</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Stuffed Eggplant</h4>
+                    <p>Roasted eggplant stuffed with meat, cheese, and vegetables and topped with tomato sauce</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Shellfish Paella</h4>
+                    <p>Clams, Mussels, and vegetables on a bed of paella and sauce</p>
+                </div>
+            </div>
+            <div class="desserts">
+                <h2 class="menu-header">Desserts</h2>
+                <div class="menu-item">
+                    <h4>Tiramis&ugrave;</h4>
+                    <p>Ladyfingers, Mascarpone, Espresso, & Cocoa</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Cannoli</h4>
+                    <p>3 Cannoli filled with imported Italian Ricotta</p>
+                </div>
+                <div class="menu-item">
+                    <h4>Panna Cotta</h4>
+                    <p>Warm, sugared cream in strawberry sauce</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer"><footer>&copy; 2021 Trattoria Iris</footer></div>
+    </div>
 </body>
 </html>
