--- a/reservations.html
+++ b/reservations.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/95e358ce56.js" crossorigin="anonymous"></script>
     <title>Trattoria Iris - Reservations</title>
 </head>
@@ -14,5 +17,39 @@
             <i class="fas fa-bars menu"></i>
         </nav>
     </header>
+        <div class="reservations-heading"><h1>Make your reservation below!</h1></div>
+        <div class="push-container">
+            <form action="#">
+                <div class="form-item">
+                    <label>Name: 
+                        <input type="text" name="name" required>
+                    </label>
+                </div>
+                <div class="form-item">
+                    <label>Phone: 
+                        <input type="tel" name="tel" required>
+                    </label>
+                </div>
+                <div class="form-item">
+                    <label>Email: 
+                        <input type="email" name="email">
+                    </label>
+                </div>
+                <div class="form-item">
+                    <label>Date:
+                        <input type="date" name="date" required>
+                    </label>
+                </div>
+                <div class="form-item">
+                    <label>Time: 
+                        <input type="time" name="time" required>
+                    </label>
+                </div>
+                <div class="form-item submit">
+                    <input type="submit">
+                </div>
+            </form>
+            <div class="footer"><footer>&copy; 2021 Trattoria Iris</footer></div>
+        </div>
 </body>
 </html>
