added functional nav to all pages

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <header>
         <nav>
             <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
-            <ul class="topnav" id="js-menu">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
             <div>
                 <a href="javascript:void(0);" class="icon"  id="js-navbar-toggle">
                     <i class="fas fa-bars menu"></i>
                 </a>
             </div>
         </nav>
+        <ul class="topnav" id="js-menu">
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="reservations.html">Contact</a></li>
+        </ul>
     </header>
     <div class="welcome-container">
         <div class="welcome">
