--- a/menu.html
+++ b/menu.html
@@ -14,10 +14,19 @@
     <div class="push-container">
         <div class="menu-content">
             <header>
-                <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
                 <nav>
-                    <i class="fas fa-bars menu"></i>
+                    <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
+                    <div>
+                        <a href="javascript:void(0);" class="icon"  id="js-navbar-toggle">
+                            <i class="fas fa-bars menu"></i>
+                        </a>
+                    </div>
                 </nav>
+                <ul class="topnav" id="js-menu">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="reservations.html">Contact</a></li>
+                </ul>
             </header>
             <div class="appetizers">
                 <h2 class="menu-header">Appetizers</h2>
@@ -89,3 +98,4 @@
     </div>
 </body>
 </html>
+<script src="script.js"></script>
