--- a/reservations.html
+++ b/reservations.html
@@ -12,10 +12,19 @@
 </head>
 <body>
     <header>
-        <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
         <nav>
-            <i class="fas fa-bars menu"></i>
+            <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
+            <div>
+                <a href="javascript:void(0);" class="icon"  id="js-navbar-toggle">
+                    <i class="fas fa-bars menu"></i>
+                </a>
+            </div>
         </nav>
+        <ul class="topnav" id="js-menu">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </header>
         <div class="reservations-heading"><h1>Make your reservation below!</h1></div>
         <div class="push-container">
@@ -53,3 +62,4 @@
         </div>
 </body>
 </html>
+<script src="script.js"></script>
