removed push containers

--- a/reservations.html
+++ b/reservations.html
@@ -27,39 +27,32 @@
         </ul>
     </header>
         <div class="reservations-heading"><h1>Make your reservation below!</h1></div>
-        <div class="push-container">
             <form action="#">
                 <div class="form-item">
-                    <label>Name: 
-                        <input type="text" name="name" required>
-                    </label>
+                    <label>Name: </label>
+                    <input type="text" name="name" required>
                 </div>
                 <div class="form-item">
-                    <label>Phone: 
-                        <input type="tel" name="tel" required>
-                    </label>
+                    <label>Phone: </label>
+                    <input type="tel" name="tel" required>
                 </div>
                 <div class="form-item">
-                    <label>Email: 
-                        <input type="email" name="email">
-                    </label>
+                    <label>Email: </label>
+                    <input type="email" name="email">
                 </div>
                 <div class="form-item">
-                    <label>Date:
-                        <input type="date" name="date" required>
-                    </label>
+                    <label>Date:</label>
+                    <input type="date" name="date" required>
                 </div>
                 <div class="form-item">
-                    <label>Time: 
-                        <input type="time" name="time" required>
-                    </label>
+                    <label>Time: </label>
+                    <input type="time" name="time" required>
                 </div>
                 <div class="form-item submit">
                     <input type="submit">
                 </div>
             </form>
             <div class="footer"><footer>&copy; 2021 Trattoria Iris</footer></div>
-        </div>
 </body>
 </html>
 <script src="script.js"></script>
