threw social media div onto other two pages

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <img src="assets/images/drink_2.jpg" alt=""> <!--Photo by Ash Edmonds on Unsplash-->
     </div>
     <div class="social-media">
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-instagram-square"></i>
+        <a href="#"><i class="fab fa-facebook-square"></i></a>
+        <a href="#"><i class="fab fa-instagram-square"></i></a>
     </div>
     <footer>&copy; 2021 Trattoria Iris</footer>
 </body>
