added wireframes to directory and began with media queries

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>123 Easy St. Washington D.C. 20001</p>
         </div>
     </div>
-    <div class="reservations"><a href="#"><h2>Make a Reservation</h2></a></div>
+    <div class="reservations"><a href="reservations.html"><h2>Make a Reservation</h2></a></div>
     <div class="img-container">
         <img src="assets/images/food_1.jpg" alt=""> <!--Photo by Casey Lee on Unsplash-->
         <img src="assets/images/bar_1.jpg" alt=""> <!--Photo by Patrick Tomasso on Unsplash-->
