finished responsive topnav

--- a/reservations.html
+++ b/reservations.html
@@ -14,7 +14,12 @@
     <header>
         <nav>
             <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
-            <div>
+            <ul class="topnav-lg">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="#">Reservations</a></li>
+            </ul>
+            <div class="toggler">
                 <a href="javascript:void(0);" class="icon"  id="js-navbar-toggle">
                     <i class="fas fa-bars menu"></i>
                 </a>
@@ -23,7 +28,7 @@
         <ul class="topnav" id="js-menu">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Reservations</a></li>
         </ul>
     </header>
         <div class="reservations-heading"><h1>Make your reservation below!</h1></div>
