--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <header>
         <nav>
             <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
-            <div>
+            <ul class="topnav-lg">
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
+            </ul>
+            <div class="toggler">
                 <a href="javascript:void(0);" class="icon"  id="js-navbar-toggle">
                     <i class="fas fa-bars menu"></i>
                 </a>
@@ -22,7 +27,7 @@
         <ul class="topnav" id="js-menu">
             <li><a href="#" class="active">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
-            <li><a href="reservations.html">Contact</a></li>
+            <li><a href="reservations.html">Reservations</a></li>
         </ul>
     </header>
     <div class="welcome-container">
