--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trattoria Iris - Home</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/styles/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/95e358ce56.js" crossorigin="anonymous"></script>
@@ -70,4 +70,4 @@
     <footer>&copy; 2021 Trattoria Iris</footer>
 </body>
 </html>
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
