--- a/reservations.html
+++ b/reservations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
@@ -64,4 +64,4 @@
         <div class="footer"><footer>&copy; 2021 Trattoria Iris</footer></div>
 </body>
 </html>
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
