--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
     <div class="welcome-container">
         <div class="welcome">
             <h2>Welcome to Trattoria Iris</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non cupiditate, recusandae nam vel tenetur delectus. 
-                Aut, esse, earum atque blanditiis deleniti corporis cupiditate voluptate, dolore cumque saepe voluptas accusamus 
-                est?
+            <p>Join us every day from 3-7pm for Happy Hour!
             </p>
         </div>
     </div>
