--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <img src="assets/images/eye_1.jpg" alt="" class="main-logo">
+            <img src="assets/images/eye_1.jpg" alt="Trattoria Iris Logo" class="main-logo">
             <ul class="topnav-lg">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
@@ -54,12 +54,12 @@
     </div>
     <div class="reservations"><a href="reservations.html"><h2>Make a Reservation</h2></a></div>
     <div class="img-container">
-        <img src="assets/images/food_1.jpg" alt=""> <!--Photo by Casey Lee on Unsplash-->
-        <img src="assets/images/bar_1.jpg" alt=""> <!--Photo by Patrick Tomasso on Unsplash-->
-        <img src="assets/images/drink_1.jpg" alt=""> <!--Photo by Shangyou Shi on Unsplash-->
-        <img src="assets/images/water.jpg" alt=""> <!--Photo by Cloris Ying on Unsplash-->
-        <img src="assets/images/food_2.jpg" alt=""> <!--Photo by STIL on Unsplash-->
-        <img src="assets/images/drink_2.jpg" alt=""> <!--Photo by Ash Edmonds on Unsplash-->
+        <img src="assets/images/food_1.jpg" alt="Image of Entree"> <!--Photo by Casey Lee on Unsplash-->
+        <img src="assets/images/bar_1.jpg" alt="Picture of Bar"> <!--Photo by Patrick Tomasso on Unsplash-->
+        <img src="assets/images/drink_1.jpg" alt="Image of Cocktail"> <!--Photo by Shangyou Shi on Unsplash-->
+        <img src="assets/images/water.jpg" alt="Image of Glass of Water on table"> <!--Photo by Cloris Ying on Unsplash-->
+        <img src="assets/images/food_2.jpg" alt="Image of Entree"> <!--Photo by STIL on Unsplash-->
+        <img src="assets/images/drink_2.jpg" alt="Image of Cocktail"> <!--Photo by Ash Edmonds on Unsplash-->
     </div>
     <div class="social-media">
         <a href="#"><i class="fab fa-facebook-square"></i></a>
